--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #181818;
-    color: #fff;
 }
 
 body{
@@ -13,6 +11,7 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
 header{
@@ -24,7 +23,7 @@ h1{
 }
 
 h1 a{
-    color: white;
+    color: rgb(74, 74, 74);
     text-decoration: none;
 }
 
